crates/reinhardt-commands/tests/ui/command_missing_name.stderr
error[E0046]: not all trait items implemented, missing: `name`
  --> tests/ui/command_missing_name.rs:14:1
   |
14 | impl BaseCommand for InvalidCommand {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `name` in implementation
   |
   = help: implement the missing item: `fn name(&self) -> &str { todo!() }`
